# BachelorFairMQ

./: CMakeLists.txt
epn-to-scheduler 1/: FLP.cxx  cmake_install.cmake  ex-epn-to-scheduler.json  fairmq-start-ex-epn-to-scheduler.sh.in
examples/: CMakeLists.txt
examples/1-1/: runSampler.cxx
examples/1-n-1/: Processor.cxx  ex-1-n-1.json
examples/SCHEDULER-FLP-EPN/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Message.h  README.md  RR.txt  TimebetweenReceptionOfTf.gp  TimebetweenReceptionOfTf.txt  cmake_install.cmake  conf.json  conf_gen.rb  epn.cxx  epn.h  ex-SCHEDULER-FLP-EPN.json  fairmq-ex-SCHEDULER-FLP-EPN-flp  fairmq-start-ex-SCHEDULER-FLP-EPN.sh  fairmq-start-ex-SCHEDULER-FLP-EPN.sh.in  fairmq-start-ex-SCHEDULER-FLP-EPN.sh.in~  fairmq-start-ex-SCHEDULER-FLP-EPN.sh_install  fairmq-start-ex-SCHEDULER-FLP-EPN.sh_install~  fairmq-start-ex-SCHEDULER-FLP-EPN.sh~  flp.cxx  flp.h  heatdata.txt  heatmap.gp  processingTime.gp  processingTime.txt  runEpn.cxx  runFlp.cxx  runScheduler.cxx  schedalg.txt  scheduler.cxx  scheduler.h  scheduler.h~  start3-3.spm  test-ex-SCHEDULER-FLP-EPN.sh  test-ex-SCHEDULER-FLP-EPN.sh.in  test-ex-SCHEDULER-FLP-EPN.sh.in~  test-ex-SCHEDULER-FLP-EPN.sh~  test.spm
examples/dds/: ex-dds-topology.xml
examples/epn-to-scheduler 1/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  EPN.cxx  EPN.h  FLP.h  Makefile  Message.h  Scheduler.cxx  Scheduler.h  fairmq-ex-epn-to-scheduler-scheduler  fairmq-start-ex-epn-to-scheduler.sh  fairmq-start-ex-epn-to-scheduler.sh_install  runEPN.cxx  runFLP.cxx  runScheduler.cxx  test-ex-epn-to-scheduler.sh  test-ex-epn-to-scheduler.sh.in
examples/multiple-channels/: Sampler.cxx
fairmq/: DeviceRunner.h  FairMQChannel.h  FairMQDevice.h  FairMQLogger.h  FairMQMessage.h  FairMQTransportFactory.h  Plugin.h  PluginManager.h  PluginServices.h  Tools.h  Transports.h  runFairMQDevice.h
fairmq/options/: FairMQProgOptions.h
fairmq/tools/: Network.h
fairmq/zeromq/: FairMQTransportFactoryZMQ.cxx
